# vite-rust

./: CHANGELOG.md  Cargo.toml  Readme.md
.github/workflows/: ci.yml
example/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
example/src/: main.rs
example/src/www/: index.css  main.tsx
src/: asset.rs  chunk.rs  config.rs  error.rs  lib.rs  manifest.rs  vite.rs
src/features/: html_directives.rs  mod.rs
src/test_utils/: mod.rs  normalize_strings.rs
src/utils/: heart_beat.rs  map_to_arc_vec.rs  mod.rs  resolve_path.rs
tests/: dummy.txt  html_directives.rs  readme_snippets.rs  test-manifest.json
vite-rs-plugin/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
vite-rs-plugin/src/: helpers.ts  index.ts  inertia.ts  types.ts
vite-rs-plugin/tests/: plugin.spec.ts  resolvers.spec.ts
