[package]
name = "vite-rust"
description = "A Rust Vite back-end integration."
repository = "https://github.com/KaioFelps/vite-rust"
keywords = ["rust", "vite", "rust-vite", "rust-vite-plugin", "vite plugin"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Kaio Felipe" ]

[workspace]
members = ["example"]

[features]
basic_directives = []

[dependencies]
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0"
log = "0.4.22"
reqwest = { version = "0.12", features = [] }
md-5 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
