[package]
name = "vite-rust"
description = "A Vite back-end integration for Rust applications."
repository = "https://github.com/KaioFelps/vite-rust"
homepage = "https://github.com/KaioFelps/vite-rust"
keywords = ["rust", "vite", "vite-rust", "vite rust"]
version = "0.2.2"
edition = "2021"
readme = "README.md"
authors = [ "Kaio Felps" ]
license-file = "LICENSE"
exclude = [
    "example/*",
    "vite-rs-plugin/*",
    ".github/*",
    ".vscode/*"
]

[workspace]
members = ["example"]

[features]
basic-directives = []

[dependencies]
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0"
log = "0.4.22"
reqwest = { version = "0.12", features = [] }
md-5 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
